# gpu_nn

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
examples/cifar/: CMakeLists.txt  cifar10.cpp  cifar10.py  create_data.cpp  x_test.dat.REMOVED.git-id  x_train.dat.REMOVED.git-id
examples/mnist/: CMakeLists.txt  mnist.cpp  mnist_lenet.cpp
examples/rnn/: CMakeLists.txt  rnn.cpp
include/: common.h  cuda_math.h  debug_info.hpp  math.h  network.h  neural_network.h  storage.h  threadsafe_queue.hpp  trainArgs.h  workspace_manager.hpp
include/gradient_descent/: adagrad.hpp  gradient_descent.h  momentum.hpp  rmsprop.hpp  sgd.h
include/initalization/: glorot.hpp  init.hpp  lcn.hpp  normal.hpp
include/layer/: convolution.h  dense.h  dropout.h  im2col_layer.h  input.h  layer.h  lstm.hpp  pooling.h  relu.h  softmax.h
include/loss/: cross_entropy.h  loss.h
include/metrics/: char_rnn.hpp  metric.hpp  missclassified.hpp
include/utils/: io.h  normalization.hpp
python/: bindings.cpp  cifar10.py  mnist.py
src/: cuda_math.cu  debug_info.cpp  math.cpp  network.cpp  storage.cpp  train.cpp  trainArgs.cpp
src/gradient_descent/: .sgd.cpp.swp  adagrad.cpp  gradient_descent.cpp  momentum.cpp  rmsprop.cpp  sgd.cpp
src/initalization/: glorot.cpp  lcn.cpp  normal.cpp
src/layer/: convolution.cpp  dense.cpp  dropout.cpp  im2col_layer.cpp  input.cpp  layer.cpp  lstm.cpp  pooling.cpp  relu.cpp  softmax.cpp
src/loss/: cross_entropy.cpp  loss.cpp
src/metrics/: char_rnn.cpp  missclassified.cpp
src/utils/: global_contrast_normalization.cpp  standard_normalization.cpp  zca_scaler.cpp
test/: CMakeLists.txt  backward.cpp  cifar10.cpp  convolution.cpp  copy_data.cpp  cross_entropy.cpp  dense.cpp  dropout.cpp  forward.cpp  im2col_layer.cpp  inits.cpp  lstm.cpp  mnist.cpp  mnist_lenet.cpp  momentum.cpp  normalization.cpp  pooling.cpp  relu.cpp  sgd.cpp  softmax.cpp
test/cifar/: cifar10.cpp  cifar10.py  create_data.cpp
test/rnn/: rnn.cpp
